--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="utf-8">
   <head>
-    <title>Angular2 Base</title>
+    <title>Vue Base</title>
     <base href="/">
     <link rel="stylesheet" href="bundle.css">
     <script src="dlls/vendor.js"></script>
