Webpack: use ExtractTextPlugin on css files

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Vue Base</title>
     <base href="/">
+    <link rel="stylesheet" href="bundle.css">
     <script src="dlls/vendor.js"></script>
     <script src="/polyfills.js"></script>
   </head>
