--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,17 +1,23 @@
-
-<!doctype html>
-<html lang="utf-8">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Vue Base</title>
-    <base href="/">
-    <link rel="stylesheet" href="bundle.css">
-    <script src="dlls/vendor.js"></script>
-    <script src="/polyfills.js"></script>
+    <title>{{ title }}</title>
+    <meta charset="utf-8">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-icon" sizes="120x120" href="/public/logo-120.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <!-- <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png"> -->
+    <meta name="theme-color" content="#f60">
+    <link rel="manifest" href="/manifest.json">
+    <style>
+      #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
+      #skip a:focus {  position:static;  width:auto;  height:auto;  }
+    </style>
   </head>
   <body>
-  <base-app>
-  Loading....
-  </base-app>
-  <script src="/app.js"></script>
+  <div id="skip"><a href="#app">skip to content</a></div>
+  <!--vue-ssr-outlet-->
   </body>
 </html>
